# AI-code-gen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/doc/: phase1-foundation.md  phase2-spec-agent.md  phase3-coding-agent.md  phase4-devops-agent.md  phase5-orchestration.md
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base.py  coding_agent.py  devops_agent.py  registry.py  spec_agent.py
app/api/: __init__.py  deps.py  middleware.py
app/api/v1/: health.py  project_templates.py  projects.py  router.py  templates.py
app/core/: __init__.py  events.py  exceptions.py  orchestrator.py  session.py  template_repository.py  templates.py
app/generators/: __init__.py
app/generators/nextjs/: __init__.py  project.py
app/models/: __init__.py  deployment.py  estimation.py  generation.py  project.py  project_template.py  spec.py  template.py
app/parsers/: __init__.py  csv.py  markdown.py
app/services/: __init__.py  embedding_service.py  template_service.py
app/utils/: __init__.py  debug.py  logging.py
claude/doc/: template-estimation-plan.md
scripts/: dev.sh  lint.sh  test.sh
tests/: __init__.py  conftest.py
tests/fixtures/: sample_spec.csv  sample_spec.md
tests/integration/: test_api.py  test_orchestrator.py
tests/unit/: test_agents.py  test_coding_agent.py  test_devops_agent.py  test_models.py  test_parsers.py  test_session.py  test_templates.py  test_tracing.py
