[project]
name = "app-agent"
version = "0.1.0"
description = "AI-driven developer platform that transforms specifications into deployed applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    # Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # HTTP Client
    "httpx>=0.26.0",
    # AI Agent SDK
    "claude-agent-sdk>=0.1.0",
    # Logging
    "structlog>=24.1.0",
    # Utilities
    "python-multipart>=0.0.6",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "langsmith[claude-agent-sdk]>=0.4.59",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Limit output: short traceback, no verbose, max 10 failures
addopts = "--tb=line -q --maxfail=10"
# Disable warnings to reduce output
filterwarnings = ["ignore::DeprecationWarning", "ignore::PendingDeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["claude_agent_sdk.*", "sse_starlette.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "langsmith[claude-agent-sdk]>=0.4.59",
    "pytest>=9.0.2",
]
